--- a/flask-computer-vision/public/index.html
+++ b/flask-computer-vision/public/index.html
@@ -27,6 +27,10 @@
                 <div id="value" class="ib"></div>
             </div>
             <div class="text-item">
+                <b>Location:</b>
+                <div id="loc" class="ib">Toronto</div>
+            </div>
+            <div class="text-item">
                 <b>Claim Risk / Year:</b>
                 <div id="risk" class="ib"></div>
             </div>
